# Multi-Model-Agentic-AI

./: .gitignore  .gitmodules  CMakeLists.txt  COMPREHENSIVE_FEATURES.md  DEPLOYMENT_READY.md  ENABLE_PAGES.md  GITHUB_PAGES_SETUP.md  GITHUB_PAGES_SETUP_COMPLETE.md  GITHUB_PAGES_STATUS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MULTI_LLM_SETUP.md  OLLAMA_INTEGRATION.md  PROJECT_PAGE_SETUP.md  README.md  THINKING_OUTPUT_EXAMPLE.md  WORKFLOW_STATUS.md  test_thinking.sh
.github/workflows/: deploy-gh-pages.yml  pages.yml  validate.yml
config/: agents.yaml  agents_advanced.yaml  agents_example.json  agents_multi_llm.yaml  agents_ollama.yaml
doc/: DIAGRAMS_SUMMARY.md  paper.aux  paper.out  paper.tex  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc
docs/: index.html
examples/: example_usage.cpp
scripts/: add_watermark.py  enable_pages.sh
src/: agent.cpp  agent.hpp  agent_manager.cpp  agent_manager.hpp  communication.cpp  communication.hpp  llm_wrapper.cpp  llm_wrapper.hpp  main.cpp  memory.cpp  memory.hpp  reporting.cpp  reporting.hpp  task_interface.cpp  task_interface.hpp  verbose.cpp  verbose.hpp
src/cache/: cache_coherent.hpp
src/distributed/: network.hpp
src/fault_tolerance/: retry.cpp  retry.hpp
src/protocol/: protocol.hpp
src/security/: security.cpp  security.hpp
src/utils/: atomicity.hpp  thread_pool.cpp  thread_pool.hpp
tests/: test_all.cpp  test_framework.cpp  test_framework.hpp
website/: README.md  package-lock.json  package.json
website/app/: layout.tsx  page.tsx
website/components/: ArchitectureDiagram.tsx  Benchmarks.tsx  CodeSection.tsx  ComparisonMatrix.tsx  Features.tsx  Hero.tsx  PaperSection.tsx  Stats.tsx  Studies.tsx
